--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -12,6 +12,11 @@
                 <span class="oi oi-home" aria-hidden="true"></span> Home
             </NavLink>
         </li>
+        <li class="nav-item px-3" style="tex">
+            <NavLink class="nav-link" href="Node" Match="NavLinkMatch.All">
+                <h4 class="bi bi-laptop pe-2" aria-hidden="true"></h4> Node
+            </NavLink>
+        </li>
     </ul>
 </div>
 
