--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -14,7 +14,17 @@
         </li>
         <li class="nav-item px-3" style="tex">
             <NavLink class="nav-link" href="Node" Match="NavLinkMatch.All">
-                <h4 class="bi bi-laptop pe-2" aria-hidden="true"></h4> Node
+                <h4 class="bi bi-laptop m-1 ms-0 me-2" aria-hidden="true"></h4> Node
+            </NavLink>
+        </li>
+        <li class="nav-item px-3" style="tex">
+            <NavLink class="nav-link" href="SymantecVeeam" Match="NavLinkMatch.All">
+                <h4 class="bi bi-app m-1 ms-0 me-2" aria-hidden="true"></h4> Symantec/Veeam
+            </NavLink>
+        </li>
+        <li class="nav-item px-3" style="tex">
+            <NavLink class="nav-link" href="Hardware" Match="NavLinkMatch.All">
+                <h4 class="bi bi-hdd-stack m-1 ms-0 me-2" aria-hidden="true"></h4> Hardware
             </NavLink>
         </li>
     </ul>
